added tag listing

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,7 +21,8 @@ html
     #dashboard
       a(name='#top')
       #overlay
-      block content
+      .dashboard-content
+        block content
 
     footer
 
