--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -62,10 +62,12 @@ html, body {
 body {
     background-color: #fff;
     font-family: Arial;
+    position: relative;
+    overflow-y: scroll;
 }
 
 header {
-    background: #aaa;
+    background: #888;
     border-bottom: 1px solid #eee;
     color: #eee;
     font-family: 'Oswald';
@@ -121,7 +123,8 @@ header a#logout:hover {
 }
 
 #overlay {
-    background-color: rgba(255, 255, 255, 0.95);
+    background-color: rgba(255, 255, 255, 0.96);
+    box-shadow: #ccc 0 0 3px;
     display: none;
     left: 20px;
     padding: 50px 20px 20px;
