--- a/views/index.jade
+++ b/views/index.jade
@@ -11,9 +11,9 @@ block content
 
     section
       ol.tabs
-        li.my-feed.selected My Feed
-        li.user-mentions Mentions
-        li.global-feed Global Feed
+        li.my-feed.selected(data-url="/my/feed") My Feed
+        li.user-mentions(data-url="/user/mentions") Mentions
+        li.global-feed(data-url="/global/feed") Global Feed
 
       ol.messages(data-userid='#{session.id}')
   else
