--- a/views/profile.jade
+++ b/views/profile.jade
@@ -29,7 +29,7 @@ block content
   section
     ol.tabs
       li.user-posts.selected(data-url="/user/posts") Recent
-      li.user-mentions(data-url="/user/mentions") Mentions
+      li.user-mentions(data-url="/user/mentions/#{user.id}") Mentions
       li.user-starred(data-url="/user/starred") Starred
 
     ol.messages(data-userid='#{user.id}')
