--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -67,6 +67,10 @@ body {
     overflow-x: hidden;
 }
 
+body.fixed {
+    overflow: hidden;
+}
+
 header {
     background: #888;
     border-bottom: 1px solid #eee;
@@ -326,10 +330,6 @@ ol.messages #paginated.loading img {
     float: left;
     position: relative;
     width: 600px;
-}
-
-.dashboard-content.fixed {
-    /* position: fixed; */
 }
 
 #profile img {
