update appcache to be prod only

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,5 +1,5 @@
 !!! 5
-html(manifest='/manifest.appcache')
+html(manifest='#{manifest}')
   head
     title NoodleApp
     meta(content='width=device-width, height=device-height, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0', name='viewport')
