--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -341,6 +341,15 @@ ol.messages #paginated.loading {
     width: 600px;
 }
 
+.dashboard-content.error h1 {
+    font-family: 'Oswald';
+    font-size: 40px;
+    margin-top: 30px;
+    padding: 30px 0 60px;
+    text-align: center;
+    text-transform: uppercase;
+}
+
 #profile img {
     float: left;
     margin-left: 20px;
@@ -408,9 +417,16 @@ ol.messages #paginated.loading {
     margin-top: 15px;
 }
 
-#profile .user-info p a, .username {
+#profile .user-info p a, .username, .dashboard-content.error a {
     color: #20c2c0;
     text-decoration: none;
+}
+
+.dashboard-content.error a {
+    display: block;
+    font-size: 30px;
+    padding-bottom: 50px;
+    text-align: center;
 }
 
 #profile .user-info ol.actions li {
