--- a/views/layout.jade
+++ b/views/layout.jade
@@ -23,6 +23,7 @@ html
     #dashboard
       a(name='#top')
       #overlay
+      #flash-message
       .dashboard-content
         block content
 
