--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -354,6 +354,11 @@ ol.messages #paginated.loading {
     text-transform: uppercase;
 }
 
+#profile {
+    float: left;
+    width: 100%;
+}
+
 #profile img {
     float: left;
     margin-left: 20px;
@@ -362,15 +367,17 @@ ol.messages #paginated.loading {
 }
 
 #profile .user-info {
+    background-color: rgba(0, 0, 0, 0.66);
     float: left;
     padding: 10px 20px;
     overflow: hidden;
     text-overflow: ellipsis;
+    text-shadow: #111 1px 1px 1px;
     width: 340px;
 }
 
 #profile .user-info h2 {
-    color: #222;
+    color: #aaa;
     display: block;
     float: left;
     font-family: 'Oswald';
@@ -378,7 +385,6 @@ ol.messages #paginated.loading {
     margin-bottom: 10px;
     overflow: hidden;
     text-overflow: ellipsis;
-    text-shadow: #fff 0 1px 0, #eee 0 -1px 0;
     text-transform: uppercase;
     width: 360px;
 }
@@ -392,7 +398,7 @@ ol.messages #paginated.loading {
 }
 
 #profile .user-info h3 {
-    color: #222;
+    color: #ccc;
     float: left;
     font-size: 20px;
     line-height: 30px;
@@ -401,7 +407,7 @@ ol.messages #paginated.loading {
 }
 
 #profile .user-info h3.small {
-    color: #888;
+    color: #999;
     font-size: 15px;
     margin-bottom: 0;
     width: 100%;
@@ -414,7 +420,7 @@ ol.messages #paginated.loading {
 
 #profile .user-info p {
     clear: both;
-    color: #888;
+    color: #aaa;
     float: left;
     font-size: 14px;
     line-height: 18px;
@@ -514,7 +520,7 @@ button[type="submit"], section.public li a {
     font-family: 'Oswald';
     font-size: 18px;
     line-height: 18px;
-    padding: 3px 10px;
+    padding: 4px 11px;
     text-transform: uppercase;
 }
 
@@ -534,18 +540,30 @@ section.public li a {
     width: 150px;
 }
 
-ol.tabs li, .action-buttons li {
+ol.tabs li {
     background-color: #ccc;
-    border-radius: 5px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
     color: #aaa;
+    padding: 6px 12px 5px;
+}
+
+ol.tabs li, .action-buttons li {
     cursor: pointer;
     float: left;
-    margin: 2px 2px 5px;
+    margin: 2px 2px 0;
     font-family: 'Oswald';
     font-size: 20px;
     line-height: 20px;
-    padding: 5px 12px;
     text-transform: uppercase;
+}
+
+.action-buttons li {
+    background-color: #7edddc;
+    border-radius: 5px;
+    color: #348988;
+    padding: 5px 12px;
+    text-shadow: none;
 }
 
 ol.tabs li:first-child {
@@ -876,7 +894,11 @@ img.hush {
     }
 
     #profile .user-info {
-        width: 290px;
+        width: 280px;
+    }
+
+    #profile .user-info h2 {
+        font-size: 35px;
     }
 
     #overlay .info {
