--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,7 +18,7 @@ html
       a.home(href='/') NoodleApp
 
       if session
-        a(href='/logout', id='logout') Log out
+        a(href='/logout', id='logout', title='Sign out') Log out
 
     #dashboard
       a(name='#top')
