--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,3 +1,13 @@
+mixin messageForm(cssName, placeholder, message)
+  #write(name='#write', class='#{cssName}')
+    form(method='post')
+      textarea(name='text', placeholder='#{placeholder}')= message
+      input(type='hidden', name='reply_to', value='', id='reply_to')
+      input(type='hidden', name='_csrf', value='#{csrf}')
+      span#count 256
+      button(type='submit') Post
+      #suggestions
+
 !!! 5
 html
   head
