--- a/views/profile.jade
+++ b/views/profile.jade
@@ -14,7 +14,7 @@ block content
       h3(class='following') Following #{user.counts.following}
       h3(class='followers') Followers #{user.counts.followers}
 
-      ol.action-buttons(data-userid='#{user.id}')
+      ol.action-buttons(data-userid='#{user.id}', data-username='#{user.username}')
         if session && (user.id !== session.id)
           if user.you_follow
             li(class='follow on') Unfollow
@@ -26,13 +26,7 @@ block content
             li(class='mute') Mute
 
       p!= description.replace(/\n/gm, '<br>')
-  #write.profile
-    form(method='post')
-      textarea(name='message', placeholder='Write a message to @#{username}') @#{username}&#xa0;
-      input(type='hidden', name='reply_to', value='', id='reply_to')
-      input(type='hidden', name='_csrf', value='#{csrf}')
-      span#count 256
-      button(type='submit') Post
+  mixin messageForm('profile', 'Write a message to @' + username, '@' + username + ' ')
 
   section
     ol.tabs
