--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -73,7 +73,7 @@ body.fixed {
 }
 
 header {
-    background: #888;
+    background: #eee;
     border-bottom: 1px solid #eee;
     color: #eee;
     font-family: 'Oswald';
